# SeaRise-Europe

./: .env.local.example  .env.pipeline.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SeaRise Europe.sln  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: docs-or-architecture-feedback.md  feature-or-scope-proposal.md
.github/workflows/: ci.yml  codeql.yml
data/geometry/: README.md  coastal_analysis_zone.geojson  europe.geojson
docs/architecture/: 01-system-context.md  02-container-view.md  03-component-view.md  03a-frontend-architecture.md  04-runtime-sequences.md  05-data-architecture.md  06-api-and-contracts.md  07-security-architecture.md  08-deployment-topology.md  09-observability-and-operations.md  10-testing-strategy.md  11-architecture-decisions.md  12-risks-assumptions-and-open-questions.md  13-domain-model.md  14-integration-patterns.md  15-performance-and-scalability.md  16-geospatial-data-pipeline.md  17-open-question-closure-proposal.md  18-uml-system-architecture.md  19-entity-relationship-model.md  README.md
docs/delivery/: 01-decision-closure.md  02-cloud-infrastructure.md  03-geospatial-pipeline.md  04-backend-api.md  05-frontend-search.md  06-assessment-ux.md  07-transparency-a11y.md  08-release-hardening.md  ROADMAP.md  audit.md
docs/product/: COMPETITIVE_ANALYSIS.md  CONTENT_GUIDELINES.md  METRICS_PLAN.md  PERSONAS.md  PRD.md  ROADMAP.md  VISION.md
infra/blob-seed/: requirements.txt  seed.py
infra/db/: init-geography.sql  (+1 more)
scripts/: compose-smoke.sh
src/pipeline/: __init__.py  cogify.py  compute_exposure.py  config.py  download.py  preprocess.py  pyproject.toml  register.py  requirements-pipeline.txt  run_pipeline.py  upload.py  validate.py
src/pipeline/tests/: conftest.py  test_cogify.py  test_compute_exposure.py  test_config.py  test_download.py  test_preprocess.py  test_register.py  test_upload.py  test_validate.py
(+132 files in other folders)
