[project]
name = "searise-pipeline"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click",
    "numpy",
    "rasterio",
    "rio-cogeo",
    "xarray",
    "netcdf4",
    "shapely",
    "geopandas",
    "psycopg2-binary",
    "azure-storage-blob",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
