[project]
name = "searise-pipeline"
version = "0.1.0"
requires-python = ">=3.9"
# Versioned lower and upper bounds. The 2026-04-13 audit found that
# unversioned entries let pip install numpy 2.x, which breaks xarray
# collection at pytest time. Upper bounds below match the last known-good
# major series at the time of pinning — bump deliberately, not by drift.
dependencies = [
    "click>=8.1,<9.0",
    "numpy>=1.26,<2.0",
    "rasterio>=1.3,<2.0",
    "rio-cogeo>=5.0,<6.0",
    "xarray>=2024.1,<2025.0",
    "netcdf4>=1.6,<2.0",
    "shapely>=2.0,<3.0",
    "geopandas>=0.14,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "azure-storage-blob>=12.19,<13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools]
packages = ["pipeline"]

[tool.setuptools.package-dir]
pipeline = "."

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
